--- a/appnproylogico/templates/motoristas/panel.html
+++ b/appnproylogico/templates/motoristas/panel.html
@@ -19,6 +19,7 @@
         </div>
         <div class="d-flex align-items-center gap-2">
           <a class="btn-success-nav" href="{% url 'avisar_movimiento_motorista' %}"><i class="bi bi-chat-dots"></i> Avisar movimiento</a>
+          <a class="btn-success-nav" href="{% url 'agregar_moto' %}?motorista={{ motorista.id }}"><i class="bi bi-bicycle"></i> Agregar moto</a>
         </div>
       </div>
     </div>
