--- a/appnproylogico/templates/motos/detalle-moto.html
+++ b/appnproylogico/templates/motos/detalle-moto.html
@@ -611,7 +611,7 @@
         <div class="mt-4 pt-3 border-top" style="border-color: var(--border-color) !important;">
           <div class="action-buttons">
             <a class="btn btn-primary-custom btn-custom" href="{% url 'actualizar_moto' moto.id %}">
-              <i class="bi bi-pencil-square"></i> Editar Información
+              <i class="bi bi-motorcycle"></i> Editar Información
             </a>
             <a class="btn btn-danger-custom btn-custom" href="{% url 'remover_moto' moto.id %}">
               <i class="bi bi-trash"></i> Eliminar Moto
