--- a/appnproylogico/templates/motos/listado-motos.html
+++ b/appnproylogico/templates/motos/listado-motos.html
@@ -678,8 +678,8 @@
           </div>
 
           <div class="moto-actions">
-            <a class="btn btn-info-custom btn-custom" href="{% url 'actualizar_moto' mo.id %}" title="Editar" data-bs-toggle="tooltip">
-              <i class="bi bi-pencil-square"></i> Editar
+            <a class="btn btn-info-custom btn-custom" href="{% url 'actualizar_moto' mo.id %}" title="Editar moto" data-bs-toggle="tooltip">
+              <i class="bi bi-motorcycle"></i> Editar
             </a>
             <a class="btn btn-outline-custom btn-custom" href="{% url 'detalle_moto' mo.id %}" title="Ver detalle" data-bs-toggle="tooltip">
               <i class="bi bi-eye"></i> Ver
