--- a/appnproylogico/templates/asignaciones/editar-asignacion-mf.html
+++ b/appnproylogico/templates/asignaciones/editar-asignacion-mf.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
   <link rel="stylesheet" href="{% static 'css/theme.css' %}">
 </head>
-<body>
+<body class="theme-light">
   <div class="container py-4">
     <div class="d-flex justify-content-between align-items-center mb-3">
       <h1 class="h4 mb-0">Editar asignación</h1>
