--- a/appnproylogico/templates/asignaciones/listar-asignaciones-mf.html
+++ b/appnproylogico/templates/asignaciones/listar-asignaciones-mf.html
@@ -116,5 +116,15 @@
       }
     })();
   </script>
+  <script>
+    (function(){
+      const container = document.querySelector('.message-toast-container');
+      if (container){
+        setTimeout(function(){
+          container.style.display = 'none';
+        }, 4000);
+      }
+    })();
+  </script>
 </body>
 </html>
